--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+
 <h1>Hello! Hey there!</h1>
+<h4>Why not get in touch with us?</h4>
+<form>
+    <label>Name</label>
+    <input type="text">
+    <label>Email</label>
+    <input type="text">
+</form>
+
